load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "hs-msgpack")

haskell_library(
    name = "hs-msgpack-binary",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.0.17",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-types",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:data-binary-ieee754",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:text",
        "//third_party/haskell:vector",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-msgpack-binary",
        "//hs-msgpack-testsuite",
        "//third_party/haskell:base",
        "//third_party/haskell:hspec",
    ],
)
