load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "msgpack-parser",
    srcs = ["msgpack-parser.hs"],
    tags = ["no-cross"],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-binary",
        "//third_party/haskell:base",
    ],
)

haskell_binary(
    name = "msgpack-gen-sample",
    srcs = ["msgpack-gen-sample.hs"],
    tags = ["no-cross"],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-binary",
        "//third_party/haskell:base",
    ],
)
